fix(toolbar): vertical icon alignment for multi-line labels

--- a/src/components/Toolbar/_mixins.scss
+++ b/src/components/Toolbar/_mixins.scss
@@ -169,7 +169,6 @@ $toolbar__panel__transition__timing-function: $timing-function;
   }
 
   &__nav__list__title {
-    #{$carbon--spacing-01 / 2}
     &--icon {
       #{get-component-namespace($component-name: nav)}__list__item__content {
         padding-top: 1px;
